Correction z-index banier top secret

--- a/site/cci/css/forkit.css
+++ b/site/cci/css/forkit.css
@@ -11,10 +11,9 @@
 	position: fixed;
 	right: 0;
 	top: 0;
-
+	z-index: 12;
 	width: 200px;
 	height: 150px;
-
 	font-family: 'Lato', sans-serif;
 	text-decoration: none;
 }
