--- a/site/cci/style.css
+++ b/site/cci/style.css
@@ -84,7 +84,7 @@ body {
 }
 
 #shape {
-  -webkit-animation: spin 25s infinite linear;
+  -webkit-animation: spin 10s infinite linear;
 
   animation-play-state: running;
 }
